# RoadFighter

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  ConfigData.cpp  ConfigData.h  Doxyfile  Game.cpp  Game.h  Menu.cpp  Menu.h  README.md  Scoreboard.cpp  Scoreboard.h  Verslag RoadFighter.odt  main.cpp
Exception_class/: FileError.cpp  FileError.h  FontLoadError.cpp  FontLoadError.h  GameError.cpp  GameError.h  JSONParseError.cpp  JSONParseError.h  ScoreError.cpp  ScoreError.h  SpriteLoadError.cpp  SpriteLoadError.h
JSON/: Config.json  HighScore.json  Level1  Level1.json  Level2.json  Level3.json
Observer/: BulletObserver.cpp  BulletObserver.h  CrashObserver.cpp  CrashObserver.h  DistanceObserver.cpp  DistanceObserver.h  Observer.cpp  Observer.h  ObserverBackgroundEnd.cpp  ObserverBackgroundEnd.h  ObserverScore.cpp  ObserverScore.h  ObserverStartRace.cpp  ObserverStartRace.h  Subject.cpp  Subject.h
Singleton/: Random.cpp  Random.h  Transformation.cpp  Transformation.h
Sprites/: AIRacer.piko  Boss.piko  Bullet.piko  CarPlayer.piko  PassingCar1.piko  PassingCar2.piko  Rock.piko  road.piko
Utils/: Utils.h
html/: Boss_8h_source.html  Bullet_8h_source.html  ConfigData_8h_source.html  EntityFactory_8h_source.html  Entity_8h_source.html  FML_2Background_8h_source.html  FML_2PassingCar_8h_source.html  FML_2PlayerCar_8h_source.html  FileError_8h_source.html  JSONParseError_8h_source.html  JSON_2single__include_2nlohmann_2json_8hpp_source.html  Observer_8h_source.html  PlayerCar_8h_source.html  Rock_8h_source.html  SpriteLoadError_8h_source.html  Transformation_8h_source.html  Utils_8h_source.html  annotated.html  classFileError.html  classFileError__coll__graph.map  classFileError__inherit__graph.md5  classFontLoadError.html  classFontLoadError__inherit__graph.md5  classGame-members.html  classGameError-members.html  classGameError.html  classGameError__coll__graph.md5  classGameError__inherit__graph.map  classObserverScore.html  classObserverScore__coll__graph.md5  classObserver__coll__graph.md5  classObserver__inherit__graph.map  classObserver__inherit__graph.md5  classRandom-members.html  classScoreError-members.html  classSpriteLoadError__inherit__graph.map  classSpriteLoadError__inherit__graph.md5  classSubject.html  classSubject__inherit__graph.map  classSubject__inherit__graph.md5  (+198 more)
latex/: annotated.tex  classConfigData.tex  classFileError.tex  classGame.tex  (+107 more)
(+510 files in other folders)
